fix: fix prev/next button position and double scrollbar in datepicker

--- a/components/bibtemplate/src/styles/style.scss
+++ b/components/bibtemplate/src/styles/style.scss
@@ -4,7 +4,7 @@
   display: flex;
   overflow: hidden;
   height: 100%;
-  max-height: 100%;;
+  max-height: 100%;
   flex-direction: column;
 }
 
@@ -47,9 +47,19 @@
 }
 
 #bodyContainer {
+  position: relative;
   overflow: auto;
   flex: 1 1 100%;
-  padding-top: var(--ds-size-100, $ds-size-100);
+}
+
+:host([isfullscreen]) {
+  #bibTemplate {
+    max-height: 100dvh;
+  }
+
+  #bodyContainer {
+    margin-top: var(--ds-size-100, $ds-size-100);
+  }
 }
 
 #footerContainer{
